Fixed accidental entry of traceback link

--- a/_posts/2009-01-20-mobile-data-preservation.textile
+++ b/_posts/2009-01-20-mobile-data-preservation.textile
@@ -11,7 +11,7 @@ I have recently undergone a phone upgrade which involved moving from Windows Mob
 
 Fortunately I have most of my data stored on “the cloud” using Google Calendar Sync for events, contacts and email, Remember The Milk's MilkSync for tasks, Shozu and PicasaWeb for pictures and Evernote for notes. The only data left to be preserved was SMS messages, but this had no immediately obvious solution.
 
-After some searching, I discovered this "helpful article":http://homebrew.binaervarianz.de/comment.php?type=trackback&entry_id=13 by Mario Mlynek. The article describes using  "PIMBackup":http://www.dotfred.net/default.htm, which can extract a variety of data from the Windows Mobile phone into a propitiatory file format, and "SMS Backup & Restore":http://android.riteshsahu.com/2009/11/sms-backup-restore.html to transfer the data.
+After some searching, I discovered this "helpful article":http://homebrew.binaervarianz.de/index.php?/archives/13-How-to-move-Contacts-and-SMS-from-WindowsMobile-to-Android.html by Mario Mlynek. The article describes using  "PIMBackup":http://www.dotfred.net/default.htm, which can extract a variety of data from the Windows Mobile phone into a propitiatory file format, and "SMS Backup & Restore":http://android.riteshsahu.com/2009/11/sms-backup-restore.html to transfer the data.
 
 Unfortunately it was not as simple as passing the data directly from one application to the other, the user is required to perform a transformation of the CSV-esque data into XML. To make this transformation, any multi-line messages had to be reverted to a single line with HTML break tags in them. The file must then be put through a Perl script, which Mario had developed. At this stage, I had to perform some minor modifications to get it to work. My version of the script can be downloaded "here":http://www.lewisoaten.com/files/2009-01-20-mobile-data-preservation/PIM2smsxml.pl.
 
