--- a/_posts/2009-01-20-mobile-data-preservation.textile
+++ b/_posts/2009-01-20-mobile-data-preservation.textile
@@ -9,11 +9,17 @@ p(meta). 20 Jan 2009 - Plymouth, United Kingdom
 
 I have recently upgraded my phone from a Windows Mobile 6.1 to an Android 2.1 device. As with any OS upgrade, whether its on a computer or mobile phone, preserving your data is always a problem.
 
-Fortunately, most of my data is stored in “the cloud.” Google Calendar Sync for events, contacts and email, Remember The Milk’s “MilkSync” for tasks, “Shozu” and “PicasaWeb” for pictures and “Evernote” for notes. The only data left to be preserved were my SMS messages; with no obvious solution.
+Most of my data is stored in “the cloud” as follows:
+Google Calendar Sync for events, contacts and email,
+Remember The Milk’s “MilkSync” for tasks,
+“Shozu” and “PicasaWeb” for pictures
+“Evernote” for notes.
 
-After some searching, I discovered this "helpful article":http://homebrew.binaervarianz.de/index.php?/archives/13-How-to-move-Contacts-and-SMS-from-WindowsMobile-to-Android.html by Mario Mlynek. The article describes using  "PIMBackup":http://www.dotfred.net/default.htm, which can extract a variety of data from the Windows Mobile phone into a propitiatory file format, and "SMS Backup & Restore":http://android.riteshsahu.com/2009/11/sms-backup-restore.html to transfer the data.
+So the only data left to be preserved were my SMS messages; with no obvious solution.
 
-Unfortunately, it was not as simple as passing the data directly from one application to the other. The user is required to perform a transformation of the CSV-esque data into XML. To perform this transformation, any multi-line messages has to be reverted to a single line with HTML break tags. The file must then be put through a Perl script, which Mario had developed. At this stage, I had to perform some minor modifications to get it to work. My version of the script can be downloaded "here":http://docs.google.com/leaf?id=0ByfedSopdUCoMjI3MGQ5YTUtOGE1MC00YTNjLTk2NDEtMGZiNzZiZDhmZWYy&hl=en_GB.
+After some searching, I discovered this "helpful article":http://homebrew.binaervarianz.de/index.php?/archives/13-How-to-move-Contacts-and-SMS-from-WindowsMobile-to-Android.html by Mario Mlynek. The article describes using  "PIMBackup":http://www.dotfred.net/default.htm, which can extract a variety of data from the Windows Mobile phone into a proprietary file format, and "SMS Backup & Restore":http://android.riteshsahu.com/2009/11/sms-backup-restore.html to transfer the data.
+
+Unfortunately, it was not as simple as passing the data directly from one application to the other. The user is required to perform a transformation of the CSV-esque data into XML. To perform this transformation, any multi-line messages has to be changed to a single line with HTML break tags. The file must then be put through a Perl script, which Mario had developed. At this stage, I had to perform some minor modifications to get it to work. My version of the script can be downloaded "here":http://docs.google.com/leaf?id=0ByfedSopdUCoMjI3MGQ5YTUtOGE1MC00YTNjLTk2NDEtMGZiNzZiZDhmZWYy&hl=en_GB.
 
 Finally, you place the sms.xml file onto the Android phone, via Bluetooth or an alternate browser as the default browser fails to recognise the file type. The messages can then be restored so that the dates, content and threading is as though the messages were originally sent to the Android phone. If you want to ensure that none of the new messages are pruned, you should remember to modify Android's messaging application so that it doesn't delete old messages before performing the restoration.
 
