Changed category YAML to tags.

--- a/_posts/2009-01-20-mobile-data-preservation.textile
+++ b/_posts/2009-01-20-mobile-data-preservation.textile
@@ -2,7 +2,7 @@
 layout: post
 title: Mobile Data Preservation
 snippet: This post documents my attempts to preserve my personal data as I migrated my phone from Windows Mobile to Android.
-categories:
+tags:
  - backup
  - android
 ---
