--- a/_posts/2009-02-08-foss-gis-stack-demonstration.textile
+++ b/_posts/2009-02-08-foss-gis-stack-demonstration.textile
@@ -5,10 +5,10 @@ tags:
  - gis
  - opengeo
  - mapserver
-snippet: Last week I completed the first two-week sprint of my final year project. The primary aim for the sprint was setting up a digital representation of terrain with embedded objects. This involved building the selection of FOSS which I had identified in a previous research sub-project. The output of this sprint is an experimentation server containing this software setup and the knowledge of how to build the software and rectify problems which occur. As this is not a tangible deliverable of sorts, I produced a demonstration that can be presented to the stakeholders.
+snippet: Last week I completed the first two-week sprint of my final year project. The primary aim for the sprint was setting up a digital representation of terrain with embedded objects. This involved building the selection of FOSS which I had identified in a previous research sub-project. The output of this sprint is an experimentation server containing this software setup and the knowledge of how to build the software and rectify problems which occur. As this is not a tangible deliverable, I produced a demonstration that can be presented to the stakeholders.
 ---
 
-Last week I completed the first two-week sprint of my final year project. The primary aim for the sprint was setting up a digital representation of terrain with embedded objects. This involved building the selection of FOSS which I had identified in a previous research sub-project. The output of this sprint is an experimentation server containing this software setup and the knowledge of how to build the software and rectify problems which occur. As this is not a tangible deliverable of sorts, I produced a demonstration that can be presented to the stakeholders.
+Last week I completed the first two-week sprint of my final year project. The primary aim for the sprint was setting up a digital representation of terrain with embedded objects. This involved building the selection of FOSS which I had identified in a previous research sub-project. The output of this sprint is an experimentation server containing this software setup and the knowledge of how to build the software and rectify problems which occur. As this is not a tangible deliverable, I produced a demonstration that can be presented to the stakeholders.
 
 The demonstration includes the high-level system design of the software stack and several screencasts demonstrating functionality. I compiled the video using Prezi.com and it can be viewed on YouTube "here":http://www.youtube.com/watch?v=YPIlj8cOfu4.
 
