multiple changes to config and front matter

--- a/_posts/2009-01-20-mobile-data-preservation.textile
+++ b/_posts/2009-01-20-mobile-data-preservation.textile
@@ -1,5 +1,6 @@
 ---
 layout: post
+published: true
 title: Mobile Data Preservation
 snippet: This post documents my attempts to preserve my personal data as I migrated my phone from Windows Mobile to Android.
 tags:
