--- a/_posts/2010-04-09-caffeine-boost-on-a-hot-day.textile
+++ b/_posts/2010-04-09-caffeine-boost-on-a-hot-day.textile
@@ -11,9 +11,8 @@ snippet: Iced coffee is nothing new, but inspired by an Australian couples recip
 ---
 
 The time has come to knuckle down and finish off my final year report and any straggling projects as well as start revision, it is also that time of year where summer is looming around the corner. We are just starting to get a few snippets of hot weather and so it's nice to enjoy a cold drink. Considering that, as a software engineer, my caffeine level is directly proportionate to my productivity, I decided to take inspiration from an Australian couple who I met during my last weekend holiday.
-|!http://lh3.ggpht.com/_5pFmgjbK0K0/S7DQGohUsQI/AAAAAAAAo0k/m9RtO9VcB6M/s400/2010-03-27%2014.28.46.jpg!:http://picasaweb.google.com/lh/photo/i4DG3yI76doU_maYERFxiA?feat=embedwebsite|
-|>From "Iced Coffee":http://picasaweb.google.com/sphyrz/IcedCoffee?feat=embedwebsite|
-<table style="width:auto;"><tr><td><a href=""><img src="" /></a></td></tr><tr><td style="font-family:arial,sans-serif; font-size:11px; text-align:right">From <a href="http://picasaweb.google.com/sphyrz/IcedCoffee?feat=embedwebsite">Iced Coffee</a></td></tr></table>
+!http://lh3.ggpht.com/_5pFmgjbK0K0/S7DQGohUsQI/AAAAAAAAo0k/m9RtO9VcB6M/s400/2010-03-27%2014.28.46.jpg!:http://picasaweb.google.com/lh/photo/i4DG3yI76doU_maYERFxiA?feat=embedwebsite
+From "Iced Coffee":http://picasaweb.google.com/sphyrz/IcedCoffee?feat=embedwebsite
 
 h4. Ingredients
 * Instant coffee (1 - 3 tsp) or espresso (2 - 3 shots)
