--- a/_posts/2010-04-24-a-brief-history-of-gis.textile
+++ b/_posts/2010-04-24-a-brief-history-of-gis.textile
@@ -12,13 +12,13 @@ snippet: This post describes the history of GIS with focus on its evolution towa
 
 Clarke (1986) defines GIS(Geospatial Information System)s as "computer assisted systems for the capture, storage, retrieval, analysis and display of spatial data." Several similar definitions exist, but it has been noted by Cowen (1988) that the use of such vague definitions are a disservice to the field. He goes on to describe four more precise approaches for defining GIS(Geospatial Information Systems)s:
 
-*The Process-Oriented Approach* originates from an article by Calkins and Tomlinson (1977) and describes a GIS(Geospatial Information System) as a process for the input, storage, retrieval, analysis, and output of geographic information. This description holds the closest similarity to that of .
+**The Process-Oriented Approach** originates from an article by Calkins and Tomlinson (1977) and describes a GIS(Geospatial Information System) as a process for the input, storage, retrieval, analysis, and output of geographic information. This description holds the closest similarity to that of .
  
-*The Application Approach* defines GIS(Geospatial Information Systems)s in terms of their purpose. Pavlidis (1982) provides several suggested categories for this, such as: natural resource inventory systems, urban systems, planning and evaluation systems, management command and control systems, and citizen scientific systems.
+**The Application Approach** defines GIS(Geospatial Information Systems)s in terms of their purpose. Pavlidis (1982) provides several suggested categories for this, such as: natural resource inventory systems, urban systems, planning and evaluation systems, management command and control systems, and citizen scientific systems.
  
-*The Toolbox Approach* views GIS(Geospatial Information Systems)s as a collections of tools, functions and algorithms which are used to convert raw data into the output required by the user. By this definition a GIS(Geospatial Information System) is not complete without the full range of features fitting the whole process of input, output and analysis. Tomlinson and Boyle (1981) provides an earlier delineation of the functions required by a GIS(Geospatial Information System).
+**The Toolbox Approach** views GIS(Geospatial Information Systems)s as a collections of tools, functions and algorithms which are used to convert raw data into the output required by the user. By this definition a GIS(Geospatial Information System) is not complete without the full range of features fitting the whole process of input, output and analysis. Tomlinson and Boyle (1981) provides an earlier delineation of the functions required by a GIS(Geospatial Information System).
 
-*The Database Approach* is a variant of the toolbox approach which was originally described by Goodchild (1985) as "a system which uses a spatial database to provide answers to queries of a geographical nature." This definition encompasses spatial databases as GIS(Geospatial Information Systems)s in their own right.
+**The Database Approach** is a variant of the toolbox approach which was originally described by Goodchild (1985) as "a system which uses a spatial database to provide answers to queries of a geographical nature." This definition encompasses spatial databases as GIS(Geospatial Information Systems)s in their own right.
 
 These definitions vary significantly between authors and it is the case that, depending on the context, many systems related to geospatial information could be considered GIS(Geospatial Information Systems)s. In this report, a GIS(Geospatial Information System) will be viewed from the process-orientated approach as the collaborative geospatial environment will serve as a system to support the process of manipulating raw data into a user-presentable view.
 
