Tweaked history post markup

--- a/_posts/2010-04-24-a-brief-history-of-gis.textile
+++ b/_posts/2010-04-24-a-brief-history-of-gis.textile
@@ -30,36 +30,36 @@ This shift in direction can be attributed to the widespread emergence of the Int
 
 h4. References
 
-%{font-size:smaller}R. J. J. Boland and R. V. Tenkasi. Perspective making and perspective taking in communities of knowing. _Organization Science_, 6(4):350–372, 1995.%
+%{font-size:smaller}R. J. J. Boland and R. V. Tenkasi. Perspective making and perspective taking in communities of knowing. __Organization Science__, 6(4):350–372, 1995.%
 
-%{font-size:smaller}P. Braun and D. P. Guertin. Public Access to Spatial Data: Neighborhood Association Information Needs in Tucson, Arizona. _In Proceedings of the Seventeenth Annual ESRI User Conference_, Palm Springs, CA, July 1997. URL "http://www.esri.com/library/userconf/proc97/proc97/to350/pap302/p302.htm":http://www.esri.com/library/userconf/proc97/proc97/to350/pap302/p302.htm .%
+%{font-size:smaller}P. Braun and D. P. Guertin. Public Access to Spatial Data: Neighborhood Association Information Needs in Tucson, Arizona. __In Proceedings of the Seventeenth Annual ESRI User Conference__, Palm Springs, CA, July 1997. URL "http://www.esri.com/library/userconf/proc97/proc97/to350/pap302/p302.htm":http://www.esri.com/library/userconf/proc97/proc97/to350/pap302/p302.htm .%
 
-%{font-size:smaller}N. Brkljac and J. Counsell. Usability of associated gis and vrml urban models. _In Proceedings of the 1999 International Conference on Information Visualisation_, page 550, Washington, DC, USA, 1999. IEEE Computer Society. ISBN 0-7695- 0210-5.%
+%{font-size:smaller}N. Brkljac and J. Counsell. Usability of associated gis and vrml urban models. __In Proceedings of the 1999 International Conference on Information Visualisation__, page 550, Washington, DC, USA, 1999. IEEE Computer Society. ISBN 0-7695- 0210-5.%
 
-%{font-size:smaller}H. W. Calkins and Roger F Tomlinson. Geographic information systems: methods and equipment for land use planning. _International Geographic Union Commission on Geographical Data Sensing and Processing_. Resource and Land Investigations (RALI) Program, Virginia, 1977.%
+%{font-size:smaller}H. W. Calkins and Roger F Tomlinson. Geographic information systems: methods and equipment for land use planning. __International Geographic Union Commission on Geographical Data Sensing and Processing__. Resource and Land Investigations (RALI) Program, Virginia, 1977.%
 
-%{font-size:smaller}S. Carver, R. Kingston, and I. Turton. Accessing gis over the web: An aid to public participation in environmental decision-making. _In GISRUK ’98_, volume 98, pages 98–3, Edinburgh, Scotland, 1998. URL "http://www.ccg.leeds.ac.uk/vdmisp/publications/paper1.html":http://www.ccg.leeds.ac.uk/vdmisp/publications/paper1.html .%
+%{font-size:smaller}S. Carver, R. Kingston, and I. Turton. Accessing gis over the web: An aid to public participation in environmental decision-making. __In GISRUK ’98__, volume 98, pages 98–3, Edinburgh, Scotland, 1998. URL "http://www.ccg.leeds.ac.uk/vdmisp/publications/paper1.html":http://www.ccg.leeds.ac.uk/vdmisp/publications/paper1.html .%
 
 %{font-size:smaller}Keith C. Clarke. Advances in geographic information systems. Computers, environment and urban systems, 10(3-4):175–184, 1986.%
 
 %{font-size:smaller}Keith C. Clarke. Getting started with geographic information systems. Prentice Hall Upper Saddle River, NJ, 2 edition, 2001. ISBN 0139238891 9780139238895.%
 
-%{font-size:smaller}David J. Cowen. GIS versus CAD versus DBMS: What are the differences? _Photogramm. Eng. Remote Sens._, 54(11):1551–1555, 1988.%
+%{font-size:smaller}David J. Cowen. GIS versus CAD versus DBMS: What are the differences? __Photogramm. Eng. Remote Sens.__, 54(11):1551–1555, 1988.%
 
-%{font-size:smaller}N. Ferrand. Modelling and supporting multi-actor spatial planning using multiagents systems. _In Proceedings of the Third NCGIA Conference on Integrating GIS and Environmental Modelling_, pages 21–25, Santa Fe, New Mexico, USA, January 1996. URL "http://www.ncgia.ucsb.edu/conf/SANTA_FE_CD-ROM/sf_papers/ferrand_nils/santafe.html":http://www.ncgia.ucsb.edu/conf/SANTA_FE_CD-ROM/sf_papers/ferrand_nils/santafe.html .%
+%{font-size:smaller}N. Ferrand. Modelling and supporting multi-actor spatial planning using multiagents systems. __In Proceedings of the Third NCGIA Conference on Integrating GIS and Environmental Modelling__, pages 21–25, Santa Fe, New Mexico, USA, January 1996. URL "http://www.ncgia.ucsb.edu/conf/SANTA_FE_CD-ROM/sf_papers/ferrand_nils/santafe.html":http://www.ncgia.ucsb.edu/conf/SANTA_FE_CD-ROM/sf_papers/ferrand_nils/santafe.html .%
 
-%{font-size:smaller}M. F. Goodchild. Geographic information systems in undergraduate geography: A contemporary dilemma. _The Operational Geographer_, 8(1):34–38, 1985.%
+%{font-size:smaller}M. F. Goodchild. Geographic information systems in undergraduate geography: A contemporary dilemma. __The Operational Geographer__, 8(1):34–38, 1985.%
 
-%{font-size:smaller}Jonathan Grudin. Computer-supported cooperative work: history and focus. _Computer_, 27(5):19–26, 1994. doi: 10.1109/2.291294. URL "http://dx.doi.org/10":http://dx.doi.org/10. 1109/2.291294.%
+%{font-size:smaller}Jonathan Grudin. Computer-supported cooperative work: history and focus. __Computer__, 27(5):19–26, 1994. doi: 10.1109/2.291294. URL "http://dx.doi.org/10":http://dx.doi.org/10. 1109/2.291294.%
 
-%{font-size:smaller}Francis Harvey. Improving multi-purpose GIS design: Participative design. _In COSIT ’97: Proceedings of the International Conference on Spatial Information Theory_, pages 313–328, London, UK, 1997. Springer-Verlag. ISBN 3-540-63623-4.%
+%{font-size:smaller}Francis Harvey. Improving multi-purpose GIS design: Participative design. __In COSIT ’97: Proceedings of the International Conference on Spatial Information Theory__, pages 313–328, London, UK, 1997. Springer-Verlag. ISBN 3-540-63623-4.%
 
-%{font-size:smaller}P. Jankowski and M. Stasik. Design considerations for space and time distributed collaborative spatial decision making. _Journal of Geographic Information and Decision Analysis_, 1:1–8, 1997.%
+%{font-size:smaller}P. Jankowski and M. Stasik. Design considerations for space and time distributed collaborative spatial decision making. __Journal of Geographic Information and Decision Analysis__, 1:1–8, 1997.%
 
-%{font-size:smaller}M. G. Pavlidis. Database management for geographic information systems. _In Proc. National Conference on Energy Resource Management_, volume 1, pages 255–260, 1982.%
+%{font-size:smaller}M. G. Pavlidis. Database management for geographic information systems. __In Proc. National Conference on Energy Resource Management__, volume 1, pages 255–260, 1982.%
 
-%{font-size:smaller}T. Sarjakoski.    Networked gis for public participation–emphasis on utilizing image data. _Computers, Environment and Urban Systems_, 22(4):381– 392, 1998.     ISSN 0198-9715.      doi: DOI:10.1016/S0198-9715(98)00031-3. URL "http://www.sciencedirect.com/science/article/B6V9K-3X6JG78-6/2/2f647d508ac9d1c0d4e7bc3cc4eeb67b":http://www.sciencedirect.com/science/article/B6V9K-3X6JG78-6/2/2f647d508ac9d1c0d4e7bc3cc4eeb67b .%
+%{font-size:smaller}T. Sarjakoski.    Networked gis for public participation–emphasis on utilizing image data. __Computers, Environment and Urban Systems__, 22(4):381– 392, 1998.     ISSN 0198-9715.      doi: DOI:10.1016/S0198-9715(98)00031-3. URL "http://www.sciencedirect.com/science/article/B6V9K-3X6JG78-6/2/2f647d508ac9d1c0d4e7bc3cc4eeb67b":http://www.sciencedirect.com/science/article/B6V9K-3X6JG78-6/2/2f647d508ac9d1c0d4e7bc3cc4eeb67b .%
 
-%{font-size:smaller}C. Steinitz, P. Parker, and L. Jordan. Hand drawn overlays: their history and prospective uses. _Landscape Architecture_, 66(5):444–455, 1976.%
+%{font-size:smaller}C. Steinitz, P. Parker, and L. Jordan. Hand drawn overlays: their history and prospective uses. __Landscape Architecture__, 66(5):444–455, 1976.%
 
-%{font-size:smaller}Roger F Tomlinson and A Raymond Boyle. The state of development of systems for handling natural resources inventory data. _Cartographica: The International Journal for Geographic Information and Geovisualization_, 18(4):65–95, October 1981. ISSN 0317-7173 1911-9925. doi: 10.3138/7262-N455-7101-5347. URL "http://utpjournals.metapress.com/content/7262n45571015347":http://utpjournals.metapress.com/content/7262n45571015347 .%
+%{font-size:smaller}Roger F Tomlinson and A Raymond Boyle. The state of development of systems for handling natural resources inventory data. __Cartographica: The International Journal for Geographic Information and Geovisualization__, 18(4):65–95, October 1981. ISSN 0317-7173 1911-9925. doi: 10.3138/7262-N455-7101-5347. URL "http://utpjournals.metapress.com/content/7262n45571015347":http://utpjournals.metapress.com/content/7262n45571015347 .%
